codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__context_breakdown_compact_hidden_items.snap
---
source: tui/src/chatwidget/tests/context_breakdown.rs
expression: rendered
---
╭───────────────────────────────────────────────────────────────────────╮
│  >_ Context breakdown                                                 │
│                                                                       │
│  Used:       16.9k / 272.0k  (6.2%)                                   │
│  Pressure:   low                                                      │
│  Remaining:  255.1k                                                   │
│                                                                       │
│  Context usage:                                                       │
│  System prompt:               [░░░░░░░░░░░░░░░░░░░░]   0.4%  (1.2k)   │
│  System tools:                [░░░░░░░░░░░░░░░░░░░░]   0.4%  (1.1k)   │
│  MCP tools:                   [█░░░░░░░░░░░░░░░░░░░]   3.9%  (10.6k)  │
│  Skills:                      [░░░░░░░░░░░░░░░░░░░░]   0.2%  (600)    │
│  Messages:                    [░░░░░░░░░░░░░░░░░░░░]   1.2%  (3.4k)   │
│  Free space:                  [███████████████████░]  93.8%  (255.1k) │
│                                                                       │
│  Details:                                                             │
│  System tools:                                                        │
│   builtin_01:                                  8.8%    (1.5k)         │
│   builtin_02:                                  8.8%    (1.5k)         │
│   builtin_03:                                  8.7%    (1.5k)         │
│   builtin_04:                                  8.7%    (1.5k)         │
│   builtin_05:                                  8.6%    (1.4k)         │
│   ... 9 more system tools not shown                                   │
│                                                                       │
│  MCP tools:                                                           │
│   alpha:                                       6.5%    (1.1k)         │
│     tool_1:                                    1.7%    (290)          │
│     tool_2:                                    1.7%    (280)          │
│     tool_3:                                    1.6%    (270)          │
│     ... 1 more tools not shown                                        │
│   bravo:                                       6.5%    (1.1k)         │
│     tool_1:                                    1.7%    (290)          │
│     tool_2:                                    1.7%    (280)          │
│     tool_3:                                    1.6%    (270)          │
│     ... 1 more tools not shown                                        │
│   charlie:                                     6.5%    (1.1k)         │
│     tool_1:                                    1.7%    (290)          │
│     tool_2:                                    1.7%    (280)          │
│     tool_3:                                    1.6%    (270)          │
│     ... 1 more tools not shown                                        │
│   ... 2 more MCP servers not shown                                    │
│                                                                       │
│  Run /context full to show full details.                              │
╰───────────────────────────────────────────────────────────────────────╯
