codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__context_breakdown_full_card.snap
---
source: tui/src/chatwidget/tests/context_breakdown.rs
expression: rendered
---
╭───────────────────────────────────────────────────────────────────────╮
│  >_ Context breakdown                                                 │
│                                                                       │
│  Used:       16.9k / 272.0k  (6.2%)                                   │
│  Pressure:   low                                                      │
│  Remaining:  255.1k                                                   │
│                                                                       │
│  Context usage:                                                       │
│  System prompt:               [░░░░░░░░░░░░░░░░░░░░]   0.4%  (1.2k)   │
│  System tools:                [░░░░░░░░░░░░░░░░░░░░]   0.4%  (1.1k)   │
│  MCP tools:                   [█░░░░░░░░░░░░░░░░░░░]   3.9%  (10.6k)  │
│  Skills:                      [░░░░░░░░░░░░░░░░░░░░]   0.2%  (600)    │
│  Messages:                    [░░░░░░░░░░░░░░░░░░░░]   1.2%  (3.4k)   │
│  Free space:                  [███████████████████░]  93.8%  (255.1k) │
│                                                                       │
│  Details:                                                             │
│  System tools:                                                        │
│   update_goal:                                 2.3%    (390)          │
│   exec_command:                                2.0%    (342)          │
│   request_user_input:                          1.7%    (287)          │
│   apply_patch:                                 1.5%    (250)          │
│                                                                       │
│  MCP tools:                                                           │
│   codex_apps:                                 59.3%    (10.0k)        │
│     google_drive:                             59.3%    (10.0k)        │
│   openaiDeveloperDocs:                         3.6%    (603)          │
│     mcp__openaiDeveloperDocs:                  3.6%    (603)          │
╰───────────────────────────────────────────────────────────────────────╯
