codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__context_breakdown_full_command_transcript.snap
---
source: tui/src/chatwidget/tests/context_breakdown.rs
expression: rendered
---
/context full

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Context breakdown                                                 │
│                                                                       │
│  Used:       16.9k / 272.0k  (6.2%)                                   │
│  Pressure:   low                                                      │
│  Remaining:  255.1k                                                   │
│                                                                       │
│  Context usage:                                                       │
│  System prompt:               [░░░░░░░░░░░░░░░░░░░░]   0.4%  (1.2k)   │
│  System tools:                [░░░░░░░░░░░░░░░░░░░░]   0.4%  (1.1k)   │
│  MCP tools:                   [█░░░░░░░░░░░░░░░░░░░]   3.9%  (10.6k)  │
│  Skills:                      [░░░░░░░░░░░░░░░░░░░░]   0.2%  (600)    │
│  Messages:                    [░░░░░░░░░░░░░░░░░░░░]   1.2%  (3.4k)   │
│  Free space:                  [███████████████████░]  93.8%  (255.1k) │
╰───────────────────────────────────────────────────────────────────────╯
